deploy_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: soraland/test01
        name: web
        ports:
        - containerPort: 80
        resources: 
          requests: 
            cpu: 200m


==> 최소 200m(또는 1core의 20% 또는 0.2) 코어사용률을 를 보장 받을 수 있는 Worker node에 해당 pod를 생성
